--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^3.21.2",
     "express3-handlebars": "*",
+    "method-override": "^2.3.10",
     "moment": "^2.21.0",
     "mongodb": "*",
     "mongoose": "*"
